@@ -18,6 +18,7 @@ git - ?
 	- Changed language selector into a Javascript dropdown
 	- Added producer role (developer/publisher) to releases
 	- Display number of unread posts in "My messages" (instead of total threads)
+	- Optimized dbUserGet (mostly for the user list)
 
 2.7 - 2009-09-24
 	- Improved styling of the threeboxes layout
